--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,15 @@
     		<groupId>org.hibernate</groupId>
     		<artifactId>hibernate-entitymanager</artifactId>
     		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
