--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/onlinevoting
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.batch.initialize-schema=ALWAYS
+spring.batch.job.enabled=false
+input=file:users.csv
+
+ 
+
+
+# max file size - default 1MB
+spring.servlet.multipart.max-file-size=10MB
+# max request size - default 10MB
+spring.servlet.multipart.max-request-size=25MB
